# cdrtools-kr

./: ABOUT  AN-1.10  Changelog  MKNOD.hpux  README.ATAPI  README.DiskT@2  README.FreeBSD  README.OpenBSD  README.audio  README.multi  README.os2  README.raw  README.rscsi  README.sony  README.vms  README.volmgt
RULES/: MKLINKS
cdda2wav/: Makefile  Makefile.man  TODO  autoconf_  byteorder.h  cd_text.c  cdda2ogg.1  cdda2wav.1  cdda2wav.c  config.h  configure  configure.in  global.h  interface.c  interface.h  ioctl.c  lconfig.h.in  local.cnf.in  mycdrom.h  scsi_cdr.c  scsi_cmds.c  scsi_cmds.h  semshm.c  semshm.h  setuid.c  sha.h  sndconfig.c  sndfile.h  toc.c  toc.h
cdrecord/: LICENSE  Makefile  audiosize.c  auheader.h  auinfo.c  cdr_drv.c  cdrecord.1  cdrecord.c  cdrecord.dfl  cdrecord.h  cdtext.c  cdtext.h  crc16.c  crc16.h  defaults.c  diskid.c  drv_jvc.c  drv_mmc.c  drv_philips.c  drv_simul.c  drv_sony.c  fifo.c  iso9660.h  isosize.c  mmcvendor.h  movesect.c  movesect.h  scsi_scan.h  scsimmc.h  sector.c  subchan.c  wm_packet.c  wm_session.c  wm_track.c
include/: unls.h
incs/: dir.txt
libedc/: ecc.h  edc_ecc.c  encoder_tables  l2sq_table  libedc.mk  scramble_table
libfile/: apprentice.c  file.c  file.h  softmagic.c
libhfs_iso/: btree.c  file.c  hfs.c  low.c  volume.c
libparanoia/: Targets  cdda_paranoia.h  gap.c  gap.h  isort.c  isort.h  overlap.c  overlap.h  p_block.c  p_block.h  paranoia.c  paranoia.mk
librscg/: scsi-remote.c
libscg/: scgsettarget.c  scsi-aix.c  scsi-amigaos.c  scsi-apollo.c  scsi-beos.c  scsi-bsd-os.c  scsi-bsd.c  scsi-hpux.c  (+18 more)
(+162 files in other folders)
